--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.1",
     "@supabase/supabase-js": "^2.45.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
-    "postgres": "^3.4.4",
-    "prisma": "^5.18.0"
+    "postgres": "^3.4.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.1"
   }
 }
