--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.19.1",
     "@supabase/supabase-js": "^2.45.1",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
