--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,3 +1,4 @@
-TOKEN_SECRET=
-DATABASE_URL='mysql://root:@localhost:3306/skripsi'
+TOKEN_SECRET
+DATABASE_URL
+DIRECT_URL
 FRONTEND_URL='http://127.0.0.1:5555'
